# memoryforge

./: .gitignore  LICENSE  PROGRESS.md  SETUP.md
backend/: pyproject.toml
backend/memoryforge/: __init__.py  config.py
backend/memoryforge/api/: __init__.py  app.py  routes_admin.py  routes_dashboard.py  routes_history.py  routes_materials.py  routes_plans.py  routes_sessions.py  routes_subjects.py
backend/memoryforge/claude_service/: __init__.py  client.py  prompts.py  three_layer.py
backend/memoryforge/db/: __init__.py  connection.py  repository.py  schema.sql
backend/memoryforge/parser/: __init__.py  docx_parser.py  material_processor.py  pdf_parser.py  text_parser.py
backend/memoryforge/scheduler/: __init__.py  context_aware.py
backend/memoryforge/session/: __init__.py  engine.py  grader.py  question_registry.py
backend/memoryforge/sm2/: __init__.py  engine.py
backend/memoryforge/streak/: __init__.py  tracker.py
backend/tests/: conftest.py  test_api.py  test_claude_service.py  test_db.py  test_grader.py  test_material_processor.py  test_parser.py  test_question_registry.py  test_scheduler.py  test_session.py  test_sm2.py  test_streak.py
docs/superpowers/plans/: 2026-04-13-plan1-core-library-api.md  2026-04-14-plan2-electron-frontend.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/electron/: main.cjs  main.js  preload.cjs  server.cjs
frontend/src/: App.jsx
tools/: claude_autopilot.py  claude_autopilot_original.py  run_memoryforge_autopilot.sh  watch_memoryforge_autopilot.sh
(+21 files in other folders)
